update new game

--- a/Princesses-Closet/index.html
+++ b/Princesses-Closet/index.html
@@ -130,7 +130,7 @@ function playSound(id, loop) {
 	<canvas id="canvas" width="800" height="600" style="display: none; background-color:rgba(255, 255, 255, 1.00)"></canvas>
 	  <div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:800px; height:600px; position: absolute; left: 0px; top: 0px; display: none;"> </div>
 </div>
-     <div id='_preload_div_' style='display: inline-block; height:100%; width: 100%; vertical-align=middle;position:absolute;text-align: center;'>	<span style='display: inline-block; height: 100%; vertical-align: middle;'></span>	<img src=images/_preloader.gif style='vertical-align: middle; max-height: 100%'/></div>
+     <div id='_preload_div_' style='display: inline-block; height:100%; width: 100%; vertical-align=middle;position:absolute;text-align: center;'>	<span style='display: inline-block; height: 100%; vertical-align: middle;'></span>	<img src=images/preloader.gif style='vertical-align: middle; max-height: 100%'/></div>
 	<a id="rurl" href="#" target="_blank"></a>
 	<style>#rurl {display:none; position:absolute;	background:#000000;	z-index:-1;}</style>
 </body>
