update new game

--- a/Princesses-Closet/index.html
+++ b/Princesses-Closet/index.html
@@ -116,7 +116,7 @@ function playSound(id, loop) {
 </script>
 <!-- write your code here -->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="//www.playdora.com/realclick.js"></script>
+<script src="realclick.js"></script>
 
 
 
